SERVER-22109 validate index spec namespace in applyOperation_inlock

(cherry picked from commit 51f0cfa865fe090a5208d5bff47faa5fbe6a92c1)